<resources>
    <string name="app_name">SweetBlue Toolbox</string>
    <string name="not_scanning">Not scanning</string>
    <string name="auto">Auto</string>
    <string name="classic">Classic</string>
    <string name="pre_lollipop">Pre-Lollipop</string>
    <string name="post_lollipop">Post-Lollipop</string>
    <string name="scanning">Scanning</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="bond">Bond</string>
    <string name="unbond">Unbond</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="verbose">Verbose</string>
    <string name="debug">Debug</string>
    <string name="info">Info</string>
    <string name="warn">Warn</string>
    <string name="error">Error</string>
    <string name="display_type_boolean">Boolean</string>
    <string name="display_type_bitfield">Bitfield</string>
    <string name="display_type_unsigned_integer">Unsigned Integer</string>
    <string name="display_type_signed_integer">Signed Integer</string>
    <string name="display_type_decimal">Decimal</string>
    <string name="display_type_string">String</string>
    <string name="display_type_hex">Hex</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="start_scan">Start Scan</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="not_ready_to_scan">Not Ready To Scan</string>
    <string name="sort_by">Sort By...</string>
    <string name="name">Name</string>
    <string name="signal_strength">Signal Strength</string>
    <string name="select_scan_api">Select Scan Api</string>
    <string name="logger_title">Logger</string>
    <string name="device_information_title">Device Information</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="services">Services</string>
    <string name="details">Details</string>
    <string name="native_name">Native Name</string>
    <string name="mac_address">MAC Address</string>
    <string name="status">Status</string>
    <string name="service_uuids">Service UUIDs</string>
    <string name="manufacturer_id">Manufacturer ID</string>
    <string name="manufacturer_data">Manufacturer Data</string>
    <string name="tx_power">Tx Power</string>
    <string name="adv_flags">Advertising Flags</string>
    <string name="adv_name">Advertised Name</string>
    <string name="characteristics_no_characteristics">No Characteristics</string>
    <string name="write_value_load_value">Load Value</string>
    <string name="write_value_value">Value</string>
    <string name="write_value_value_hint">Enter value here</string>
    <string name="write_value_write_type">Write Type</string>
    <string name="write_value_save_as">Save As (Optional)</string>
    <string name="write_value_save_as_hint">Enter a name to save</string>
    <string name="write_value_write">Write</string>
    <string name="write_value_writing_dialog_title">Writing Value</string>
    <string name="write_value_writing_dialog_message">Please wait while the value is written to the device</string>
    <string name="write_value_writing_success_toast">Value Written Successfully</string>
    <string name="write_value_writing_fail_toast">Value Write Failed</string>
    <string name="write_value_invalid_value_toast">Invalid Value: </string>
    <string name="write_value_new_tab">New</string>
    <string name="write_value_load_tab">Load</string>
    <string name="write_value_value_name">Value Name</string>
    <string name="write_value_select_value_toast">Please select a value to write</string>
    <string name="write_value_overflow_edit">Edit</string>
    <string name="write_value_overflow_delete">Delete</string>
    <string name="settings_title">Settings</string>
    <string name="settings_import">Import Settings</string>
    <string name="settings_import_condensed">Import</string>
    <string name="settings_export">Export Settings</string>
    <string name="settings_export_condensed">Export</string>
    <string name="settings_export_email">Export Settings (e-mail)</string>
    <string name="settings_export_email_condensed">Export (e-mail)</string>
    <string name="settings_reset">Reset Settings</string>
    <string name="settings_reset_condensed">Reset</string>
    <string name="settings_save_dialog_title">Save Changes</string>
    <string name="settings_save_dialog_message">Do you want to save your changes?</string>
    <string name="settings_reset_dialog_title">Reset Settings</string>
    <string name="settings_reset_dialog_message">Are you sure you want to reset all settings to their default values?</string>
    <string name="settings_toast_unable_to_save">Unable to save preferences.</string>
    <string name="settings_toast_saved">Saved perferences to %1$s</string>
    <string name="settings_toast_unable_to_load">Unable to load preferences from %1$s</string>
    <string name="settings_toast_loaded">Loaded preferences from %1$s</string>
    <string name="nav_drawer_logger">Logger</string>
    <string name="nav_drawer_device_information">Device Information</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="nav_drawer_about">About Sweetblue</string>
    <string name="nav_drawer_feedback">Feedback</string>
    <string name="app_version">App Version - %1$s</string>
    <string name="visit_website_url">http://idevicesinc.com/sweetblue</string>
    <string name="send_feedback_email_address">SweetBlueTechSupport@idevicesinc.com</string>
    <string name="send_feedback_email_subject">SweetBlue Toolbox feedback</string>
    <string name="send_feedback_email_body"></string>
    <string name="send_feedback_send_mail">Send Mail</string>
    <string name="properties_colon">Properties:</string>
    <string name="uuid_colon">UUID:</string>
    <string name="value_colon">Value:</string>
    <string name="value">Value</string>
    <string name="data_colon">Data:</string>
    <string name="write_value">Write Value</string>
    <string name="primary_service">PRIMARY SERVICE</string>
	<string name="secondary_service">SECONDARY SERVICE</string>
    <string name="need_connection_characteristics_error">You must be connected to view the characteristics.</string>
    <string name="loading">Loading...</string>
	<string name="broadcast">Broadcast</string>
    <string name="read">Read</string>
    <string name="write_no_response">Write No Response</string>
    <string name="write">Write</string>
    <string name="notify">Notify</string>
    <string name="indicate">Indicate</string>
    <string name="signed_write">Signed Write</string>
    <string name="extended_properties">Extended Properties</string>
    <string name="unknown">Unknown</string>
    <string name="signal_strength_colon">Signal Strength: %1$s</string>
    <string name="connecting">Connecting...</string>
    <string name="discovering_services">Discovering Services...</string>
    <string name="authenticating">Authenticating...</string>
    <string name="initializing">Initializing...</string>
    <string name="connected">Connected</string>
    <string name="bonding">Bonding...</string>
    <string name="scan_type_classic">Classic</string>
    <string name="scan_type_pre_lollipop">Pre-Lollipop</string>
    <string name="scan_type_post_lollipop">Post-Lollipop</string>
    <string name="x_seconds">%1$d seconds</string>
    <string name="preferences_for">Preferences for %1$s</string>
    <string name="select_a_file">Select a file</string>
    <string name="custom_service">CUSTOM SERVICE</string>
    <string name="custom_characteristic">CUSTOM CHARACTERISTIC</string>
    <string name="custom_descriptor">CUSTOM DESCRIPTOR</string>
    <string name="no_characteristics">No Characteristics</string>
    <string name="device_information">Device Information</string>
    <string name="android_os_version">Android OS Version</string>
    <string name="os_api_level">OS API Level</string>
    <string name="linux_kernel_version">Linux Kernel Version</string>
    <string name="device_name">Device Name</string>
    <string name="bluetooth_name">Bluetooth Name</string>
    <string name="brand">Brand</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="product">Product</string>
    <string name="board">Board</string>
    <string name="supported_features">Supported Features</string>
    <string name="bluetooth_le_supported">Bluetooth LE Supported</string>
    <string name="lollipop_scan_api_supported">Lollipop Scan API Supported</string>
    <string name="scan_batching_supported">Scan batching supported</string>
    <string name="multiple_advertisement_supported">Multiple Advertisement supported</string>
    <string name="log_text_here">Log Text Here</string>
    <string name="integer">Integer</string>
    <string name="filter">Filter</string>
    <string name="filter_by_name">Filter by Name</string>
    <string name="scan_options">Scan Options</string>
    <string name="sort_options">Sort Options</string>
    <string name="gatt_format_type_rfu">RFU</string>
    <string name="gatt_format_type_boolean">Boolean</string>
    <string name="gatt_format_type_2bit">2-Bit</string>
    <string name="gatt_format_type_nibble">Nibble</string>
    <string name="gatt_format_type_uint8">UInt 8</string>
    <string name="gatt_format_type_uint12">UInt 12</string>
    <string name="gatt_format_type_uint16">UInt 16</string>
    <string name="gatt_format_type_uint24">UInt 24</string>
    <string name="gatt_format_type_uint32">UInt 32</string>
    <string name="gatt_format_type_uint48">UInt 48</string>
    <string name="gatt_format_type_uint64">UInt 64</string>
    <string name="gatt_format_type_uint128">UInt 128</string>
    <string name="gatt_format_type_sint8">SInt 8</string>
    <string name="gatt_format_type_sint12">SInt 12</string>
    <string name="gatt_format_type_sint16">SInt 16</string>
    <string name="gatt_format_type_sint24">SInt 24</string>
    <string name="gatt_format_type_sint32">SInt 32</string>
    <string name="gatt_format_type_sint48">SInt 48</string>
    <string name="gatt_format_type_sint64">SInt 64</string>
    <string name="gatt_format_type_sint128">SInt 128</string>
    <string name="gatt_format_type_float32">Float 32</string>
    <string name="gatt_format_type_float64">Float 64</string>
    <string name="gatt_format_type_sfloat">SFloat</string>
    <string name="gatt_format_type_float">Float</string>
    <string name="gatt_format_type_duint16">DUInt16</string>
    <string name="gatt_format_type_utf8s">UTF-8 String</string>
    <string name="gatt_format_type_utf16s">UTF-16 String</string>
    <string name="gatt_format_type_struct">Struct</string>
</resources>