<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <TextView
            android:id="@+id/valueTitle"
            style="@style/item_title_large"
            android:text="@string/write_value_value"/>

        <ImageView
            android:id="@+id/legalityImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_alert"
            android:layout_toRightOf="@id/valueTitle"
            android:layout_alignTop="@id/valueTitle"
            android:tint="@color/red"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/valueEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium"
            style="@style/item_text"
            android:background="@color/transparent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:hint="@string/write_value_value_hint"
            android:layout_below="@id/valueTitle"/>

        </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray">
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        >

        <TextView
            android:id="@+id/writeTypeTitle"
            style="@style/item_title_large"
            android:text="@string/write_value_write_type"/>

        <Spinner
            android:id="@+id/writeTypeSpinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium"
            android:layout_below="@id/writeTypeTitle"/>

        </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray">
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <TextView
            android:id="@+id/saveNameTitle"
            style="@style/item_title_large"
            android:text="@string/write_value_save_as"/>

        <EditText
            android:id="@+id/saveNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium"
            android:hint="@string/write_value_save_as_hint"
            style="@style/item_text"
            android:background="@color/transparent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:maxLines="1"
            android:layout_below="@id/saveNameTitle"/>

        </RelativeLayout>

</LinearLayout>